deployment/deploymentconfig-caikit-embeddings.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: caikit-embeddings
  namespace: fmaas-stack-models
  generation: 11
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: caikit-embeddings
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: caikit-embeddings
    spec:
      containers:
        - name: container
          image: 'icr.io/fm-stack/caikit-embeddings:latest'
          command:
            - bash
            - '-c'
            - cd demo/server && python start_runtime.py
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: icr-image-push
      schedulerName: default-scheduler
