deployment/deployment-caikit-embeddings.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: caikit-embeddings
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: caikit-embeddings
  template:
    metadata:
      labels:
        deployment: caikit-embeddings
    spec:
      volumes:
        - name: cos-pvc
          persistentVolumeClaim:
            claimName: pvc-caikit-embeddings-cos
      containers:
        - resources:
            limits:
              nvidia.com/gpu: '1'
          terminationMessagePath: /dev/termination-log
          name: container
          command:
            - bash
            - '-c'
            - cd demo/server && python start_runtime.py
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          imagePullPolicy: Always
          volumeMounts:
            - name: cos-pvc
              mountPath: /opt/app-root/src/demo/models/
          terminationMessagePolicy: File
          image: 'icr.io/fm-stack/caikit-embeddings:latest'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: icr-caikit-image
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: caikit-embeddings-service
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: server-port
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: grpc-port
      protocol: TCP
      port: 8085
      targetPort: 8085
  internalTrafficPolicy: Cluster
  clusterIPs:
    - None
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: caikit-embeddings
