deployment/service-caikit-embeddings.yaml
apiVersion: v1
kind: Service
metadata:
  name: caikit-embeddings-service
spec:
  selector:
    app: caikit-embeddings
  ports:
    - name: server-port
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: grpc-port
      protocol: TCP
      port: 8085
      targetPort: 8085
