deployment/route-caikit-embeddings.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: caikit-embeddings-route
  namespace: caikit-embeddings-test
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: >-
    caikit-embeddings-route-<oc-project-name>.<cluster-host>.<cluster-domain>
  to:
    kind: Service
    name: caikit-embeddings-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        caikit-embeddings-route-<oc-project-name>.<cluster-host>.<cluster-domain>
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.<cluster-host>.<cluster-domain>
